fix: text overflow

--- a/assets/css/horizontal-scroll.css
+++ b/assets/css/horizontal-scroll.css
@@ -101,7 +101,7 @@ table {
         max-width: 100vw;
         min-height: 600px;
         background: #fff;
-        overflow: scroll;
+        /* overflow: scroll; */
     }
     .text h1{
         padding: 0;
